# encryption-service-Rust

./: .gitignore  Cargo.toml  Dockerfile  README.md  docker-compose.yml  test_read_write_split.rs  应急边缘容器的拉取命令.md
.github/workflows/: docker-build.yml
.trae/documents/: 修改配置加载逻辑，支持从环境变量读取多个CRUD API实例.md  实现CRUD API容器调度中间层.md  移除默认URL，要求必须配置后端入口.md
src/: main.rs  test_config.rs
src/api/: mod.rs
src/api/handlers/: mod.rs
src/cache/: mod.rs
src/config/: mod.rs
src/crypto/: mod.rs
src/scheduler/: mod.rs
src/service/: mod.rs
src/test_instance/: mod.rs
