[package]
name = "encryption-service"
version = "0.1.0"
edition = "2024"

# 显式定义二进制目标，解决cargo fetch失败问题
[[bin]]
name = "encryption-service"
path = "src/main.rs"

[dependencies]
axum = { version = "0.7.9", features = ["macros"] }
tokio = { version = "1.48.0", features = ["full"] }
serde = { version = "1.0.203", features = ["derive"] }
serde_json = "1.0.117"
dotenvy = "0.15.1"
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
thiserror = "1.0.61"
anyhow = "1.0.86"
chrono = { version = "0.4.38", features = ["serde"] }
reqwest = { version = "0.11.27", features = ["json"] }
bcrypt = "0.15.0"
base64 = "0.22.1"
sha2 = "0.10.8"
rand = "0.8.5"
aes-gcm = "0.10.3"
hkdf = "0.12.4"
getrandom = "0.2.14"

